# studyhubbxl

./: .gitignore  README.md
backend/: Cargo.toml  README.md
backend/src/: auth.rs  email.rs  error.rs  errors.rs  levensthein.rs  limiter.rs  main.rs  models.rs  search.rs
backend/src/routes/: auth_api.rs  email.rs  location.rs  mod.rs
backend/src/routes/users/: auth.rs  favourites.rs  misc.rs  mod.rs
backend/src/v1/: filter.rs  location.rs  mod.rs
backend/src/v1/users/: auth.rs  favourites.rs  misc.rs  mod.rs
database/: Attribute.sql  Delete.sql  Favourite.sql  Ip.sql  Location.sql  Locationtype.sql  Noise.sql  Reset.sql  Session.sql  Single.surreal  Single2.surreal  User.sql
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.vue  Search-panel.vue  SearchPanel.vue  fetch.ts  main.ts  results.ts  store.ts
frontend/src/components/: Alert.vue  Button.vue  Card.vue  Checkbox.vue  ClickableIcon.vue  Echo.vue  Error.vue  Faq.vue  FavouritesPanel.vue  FilterPanel.vue  Icon.vue  Lijst.vue  List.vue  Mapbox.vue  MapboxMarker.vue  NavPanel.vue  Panel.vue  PanelFavourites.vue  Privacy.vue  SearchPanel.vue  Textfield.vue
frontend/src/models/: coordinate.ts  filteritem.ts  location.ts  user.ts
surrealdb/: Location.sql
