[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
chrono = { version = "0.4.24", features = ["serde"] }
derive_more = {version = "0.99.17", features = ["display", "error"]}
lettre = "0.10.4"
rust_decimal = { version = "1.29.1", features = ["serde_json"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
sha256 = "1.1.3"
surrealdb = "1.0.0-beta.9"
uuid = { version = "1.3.2", features = ["serde", "v4"] }
